--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,41 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --color-primary: #ff8c00;
+  --color-background: #ffffff;
+  --color-background-light: #f5f5f5;
+  --color-background-muted: #555555;
+  --color-text: #121212;
+  --color-text-muted: #555555;
+  --color-accent: #ffd700;
+  --color-border: #dddddd;
 }
+
+
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --color-primary: #ffd700;
+    --color-background: #121212;
+    --color-background-light: #1e1e1e;
+    --color-background-muted: #a9a9a9;
+    --color-text: #ffffff;
+    --color-text-muted: #a9a9a9;
+    --color-accent: #ff8c00;
+    --color-border: #2c2c2c;
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--color-text);
+  background: var(--color-background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.header-link {
+  @apply text-current hover:text-opacity-80;
+}
+
+.header-link_active {
+  @apply underline font-bold;
 }
